--- a/LinkListPractice/LinkListPractice/LinkListPractice.csproj
+++ b/LinkListPractice/LinkListPractice/LinkListPractice.csproj
@@ -36,7 +36,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="SinglyList.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
